@@ -70,9 +70,9 @@ namespace BASIC
 	// LEN function, returns length of the string
 	#define USE_LEN            1
 	// LEFT$ function, return leftmost part of the string
-	#define USE_LEFT           1
+	#define USE_LEFT           0
 	// RIGHT$ function, return rightmost part of the string
-	#define USE_RIGHT          1
+	#define USE_RIGHT          0
 #endif // USE_STRINGOPS
 /*
  * Clear program memory on NEW command
@@ -81,7 +81,7 @@ namespace BASIC
 /**
  * Allow INPUT command with text message e.g. INPUT "A:";A
  */
-#define INPUT_WITH_TEXT      1
+#define INPUT_WITH_TEXT      0
 
 #if USE_TEXTATTRIBUTES
 	/*
